--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./main.css" />
         <script src="script.js" defer></script>
-        <title>Document</title>
+        <title>Noël Auriane</title>
     </head>
     <body>
-        <h1 data-value="Ceci est un test!">Ceci est un test!</h1>
+        <h1>Clique sur le texte pour découvrir la charade</h1>
+        <p
+            data-value="Mon premier est le demi d'une tante, Mon deuxième est le contraire de rien, Mon troisième est la vieillesse de mes artères, Mon tout est un dessin peaufiné">
+            Répond à cette charade et tu découvrira ton cadeau que maman et Cedrick t'offre pour ce noël 2023,
+            en esperant que ce souvenir indélibile te fasses plaisir
+        </p>
+        <p data-value="Un Tatouage" class="answer">Decouvre la réponse</p>
     </body>
 </html>
